Updated docker file

--- a/backend-services/services/clinicomply-admin-service/Dockerfile
+++ b/backend-services/services/clinicomply-admin-service/Dockerfile
@@ -1,25 +1,25 @@
-# Use Amazon Corretto 21 (Alpine) as the base image
-FROM amazoncorretto:21.0.3-alpine
 
 LABEL folder=clinicomply-admin-service
+WORKDIR /home/app/clinicomply-admin-service
 
-# Set working directory under a multi-service structure
-WORKDIR /home/deployment/clinicomply-admin-service
 
-# Expose the application port
+COPY ./clinicomply-admin-service/pom.xml ./clinicomply-admin-service/pom.xml
+RUN mvn -f ./clinicomply-admin-service/pom.xml dependency:resolve
+
+COPY ./clinicomply-admin-service/src ./clinicomply-admin-service/src
+ARG SPRING_PROFILES_ACTIVE
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_SECRET_ACCESS_KEY
+RUN mvn -f ./clinicomply-admin-service/pom.xml clean install
+
+FROM amazoncorretto:21.0.3-alpine
 EXPOSE 9001
-
-# Install necessary dependencies (optional)
+WORKDIR /home/deployment
 RUN apk update && apk upgrade \
    && apk add --no-cache ttf-dejavu \
    && apk add --no-cache msttcorefonts-installer \
    && update-ms-fonts && fc-cache -f
+COPY ./clinicomply-admin-service/deployment/*  ./
+COPY --from=build /home/app/clinicomply-admin-service/clinicomply-admin-service/target/*.jar ./admin-service.jar
 
-# Copy deployment-related files (if any)
-COPY ./deployment/* ./deployment/
-
-# Copy the built JAR file from Jenkins workspace
-COPY ./target/*.jar ./clinicomply-admin-service.jar
-
-# Command to run the application
-ENTRYPOINT [ "sh", "-c", "java -Dlogging.config=file:./logback.xml -jar ./clinicomply-admin-service.jar" ]
+ENTRYPOINT [ "sh", "-c", "java -Dlogging.config=file:./logback.xml -jar ./admin-service.jar" ]
